@@ -1,28 +1,29 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 
-<HTML>
-<HEAD>
-<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
-<TITLE>Nagios</TITLE>
+<html>
+<head>
+<meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
+<title>Nagios</title>
 <link rel="shortcut icon" href="images/favicon.ico" type="image/ico">
-</HEAD>
-<FRAMESET BORDER="0" FRAMEBORDER="0" FRAMESPACING="0" COLS="180,*">
-<FRAME SRC="side.php" NAME="side" TARGET="main">
-<FRAME SRC="main.php" NAME="main">
-</FRAMESET>
+</head>
 
-<NOFRAMES>
+<frameset cols="180,*">
+<frame src="side.php" name="side" frameborder="0">
+<frame src="main.php" name="main" frameborder="0">
+
+<noframes>
 <!-- This page requires a web browser which supports frames. --> 
-<p>
-<center>
 <h2>Nagios</h2>
-<a href="http://www.nagios.org/" alt="Nagios Home">www.nagios.org</a><br>
-Copyright (c) 1999-2008 Ethan Galstad<br>
-</center>
+<p align="center">
+<a href="http://www.nagios.org/">www.nagios.org</a><br>
+Copyright (c) 1999-2009 Ethan Galstad<br>
 </p>
 <p>
 <i>Note: These pages require a browser which supports frames</i>
 </p>
-</NOFRAMES>
+</noframes>
 
-</HTML>
+</frameset>
+
+</html>
+
