@@ -48,7 +48,7 @@ include_once(dirname(__FILE__).'/includes/utils.inc.php');
 ?>
 		<div class="updateavailable">
 		<div class="updatemessage">A new version of Nagios is available!</div>
-		<div class="submessage">Visit <a href="http://www.nagios.org/" target="_blank">nagios.org</a> to download Nagios <?php echo $updateinfo['update_version'];?>.</a></div>
+		<div class="submessage">Visit <a href="http://www.nagios.org/" target="_blank">nagios.org</a> to download Nagios <?php echo $updateinfo['update_version'];?>.</div>
 		</div>
 <?php
 		}
