@@ -15,6 +15,7 @@ Nagios 3.x Change Log
 * Fix to RPM spec file for sample configuration files
 * Fix for bug in time calculation routines that could cause notification, reporting, and check scheduling anomalies
 * Fix for scheduling forced service checks from web interface
+* Minor mods for frameset base for HTML compliance (more fixes coming soon)
 
 
 3.0.6 - 12/01/2008
